--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
 
 script:
   - mkdir -p build/logs
-  - phpunit
+  - vendor/bin/phpunit
 
 after_script:
   - php vendor/bin/coveralls
