--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@ language: php
 php:
   - "5.5"
   - "5.6"
-  - "nightly"
 
 before_script:
   - composer install
 
 script:
   - mkdir -p build/logs
-  - vendor/bin/phpunit
+  - php vendor/bin/phpunit -c phpunit.xml
 
 after_script:
-  - php vendor/bin/coveralls
+  - travis_retry php vendor/bin/coveralls
+  - travis_retry php vendor/bin/coveralls -v
