--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0"
+        "php": ">=5.5.0",
+        "danielstjules/stringy": "^2.1"
     },
     "autoload": {
         "psr-4": {
